--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,11 +14,12 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "random-token": "0.0.8",
+    "router": "^1.3.8",
     "sharp": "^0.26.3",
     "socket.io": "^2.3.0"
   }
